<resources>
    <string name="autocomplete_search_placeholder">Search users &amp; repositories</string>
    <string name="autocomplete_leading_icon_collapse">Collapse suggestions</string>
    <string name="autocomplete_leading_icon_expand">Expand suggestions</string>
    <string name="autocomplete_clear_icon">Clear</string>
    <string name="autocomplete_empty_message">No matching users or repositories</string>
    <string name="autocomplete_error_headline">Couldn’t load results</string>
    <string name="autocomplete_retry_label">Retry</string>
    <plurals name="autocomplete_result_count">
        <item quantity="one">%1$d result</item>
        <item quantity="other">%1$d results</item>
    </plurals>
    <string name="autocomplete_result_count_capped">%1$d+ results</string>
</resources>
